--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="feature">
       <svg class="feature__icon">
-        <use xlink:href="/img/sprite.svg#icon-global"></use>
+        <use xlink:href="img/sprite.svg#icon-global"></use>
       </svg>
       <h4 class="heading-4 heading-4__dark">
         World's best luxury homes
@@ -70,7 +70,7 @@
 
     <div class="feature">
       <svg class="feature__icon">
-        <use xlink:href="/img/sprite.svg#icon-trophy"></use>
+        <use xlink:href="img/sprite.svg#icon-trophy"></use>
       </svg>
       <h4 class="heading-4 heading-4__dark">
         Only the best properties
@@ -94,7 +94,7 @@
 
     <div class="feature">
       <svg class="feature__icon">
-        <use xlink:href="/img/sprite.svg#icon-key"></use>
+        <use xlink:href="img/sprite.svg#icon-key"></use>
       </svg>
       <h4 class="heading-4 heading-4__dark">
         New home in one week
@@ -106,7 +106,7 @@
 
     <div class="feature">
       <svg class="feature__icon">
-        <use xlink:href="/img/sprite.svg#icon-presentation"></use>
+        <use xlink:href="img/sprite.svg#icon-presentation"></use>
       </svg>
       <h4 class="heading-4 heading-4__dark">
         Top 1% realtors
@@ -118,7 +118,7 @@
 
     <div class="feature">
       <svg class="feature__icon">
-        <use xlink:href="/img/sprite.svg#icon-lock"></use>
+        <use xlink:href="img/sprite.svg#icon-lock"></use>
       </svg>
       <h4 class="heading-4 heading-4__dark">
         Secure payments on nexter
@@ -130,8 +130,8 @@
 
   </section>
   <div class="story__pictures">
-    <img src="/img/story-1.jpeg" alt="story pic 1" class="story__img-1" />
-    <img src="/img/story-2.jpeg" alt="story pic 2" class="story__img-2" />
+    <img src="img/story-1.jpeg" alt="story pic 1" class="story__img-1" />
+    <img src="img/story-2.jpeg" alt="story pic 2" class="story__img-2" />
   </div>
   <div class="story__content">
     <h3 class="heading-3 mb-sm">Happy Customers</h3>
