fix svg problem

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <div class="feature">
       <svg class="feature__icon">
-        <use xlink:href="/img/sprite.svg#icon-map-pin"></use>
+        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
       </svg>
       <h4 class="heading-4 heading-4__dark">
         All homes in top locations
